src/test/ui/consts/static_mut_containing_mut_ref3.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/static_mut_containing_mut_ref3.rs:3:31
   |
LL | static mut BAR: () = unsafe { FOO.0 = 99; };
   |                               ^^^^^^^^^^ tried to modify a static's initial value from another static's initializer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
